--- a/src/components/singleProduct/style.css
+++ b/src/components/singleProduct/style.css
@@ -27,6 +27,7 @@
   padding-right: 1rem !important;
   padding-top: 1rem !important;
   padding-bottom: 1rem !important;
+  color: #fff !important;
 }
 .buttoncarts1 {
   background-color: #2abbe8 !important;
@@ -34,6 +35,7 @@
   padding-right: 1rem !important;
   padding-top: 1rem !important;
   padding-bottom: 1rem !important;
+  color: #fff !important;
 }
 .buttonsdiv {
   display: flex;
